[package]
name = "txmap"
version = "0.1.0"
edition = "2024"
description = "A concurrent transactional hash map with fine-grained locking and internal mutability"
authors = ["stock-trek.com <stock-trek@proton.me>"]
license = "MIT"
repository = "https://github.com/Stock-Trek/txmap"
readme = "README.md"
categories = ["data-structures", "concurrency"]
keywords = ["concurrent", "hashmap", "transactional", "data-structures", "locking"]

[dependencies]
hashbrown = "0.17.1"
intmap = "3.1.3"
parking_lot = "0.12.5"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = []
no-deps = true
targets = ["x86_64-unknown-linux-gnu"]
