[package]
name = "txmap"
version = "1.0.0"
edition = "2024"
description = "A concurrent transactional hash map for Rust with fine-grained locking, internal mutability and composable transactions"
authors = ["stock-trek.com <stock-trek@proton.me>"]
license = "MIT"
repository = "https://github.com/Stock-Trek/txmap"
readme = "README.md"
categories = ["data-structures", "concurrency"]
keywords = ["concurrent", "hashmap", "transactional", "data-structures", "locking"]

[dependencies]
hashbrown = "0.17.1"
intmap = "3.1.3"
parking_lot = "0.12.5"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
dashmap = "6.2.1"
rand = "0.10.2"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = []
no-deps = true
targets = ["x86_64-unknown-linux-gnu"]
